--- a/tickets/templates/componentes/navbarheader.html
+++ b/tickets/templates/componentes/navbarheader.html
@@ -14,7 +14,7 @@
                     <a class="nav-link" id="inicioLink" href="{% url 'admin_side' %}" aria-current="page">INICIO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'colas_atencion' %}">COLAS DE ACCIÓN</a>
+                    <a class="nav-link" href="{% url 'colas_atencion' %}">COLAS DE ATENCIÓN</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'estados_agente' %}">ESTADOS DE AGENTES</a>
