--- a/tickets/templates/administracion/colasatencion.html
+++ b/tickets/templates/administracion/colasatencion.html
@@ -29,7 +29,7 @@
 <div class="">
     <div class="row">
         <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto ">
-            <h5 class="titulo">COLA DE ATENCIÓN</h5>
+            <h5 class="titulo">COLAS DE ATENCIÓN</h5>
             <div class="row">
                 <div class="col-12 col-sm-10 col-md-12 col-lg-6 mx-auto mb-4 p-2">
                     <div class="mb-3 col">
