--- a/tickets/templates/visualizador/ticket_control.html
+++ b/tickets/templates/visualizador/ticket_control.html
@@ -121,7 +121,7 @@
     var playlist  = new Array();
     var posicionActual = 0;
     responsiveVoice.setDefaultVoice("Spanish Female");
-    responsiveVoice.speak('Bienvenidos');
+    responsiveVoice.speak('Bienvenidos a la UIA');
 
     function isFullscreen() {
         return (window.innerHeight === screen.height && window.innerWidth === screen.width);
