--- a/tickets/templates/agentes/inicio_atencion.html
+++ b/tickets/templates/agentes/inicio_atencion.html
@@ -48,7 +48,7 @@
                         <div class="d-flex justify-content-center flex-wrap mx-auto ">
                             <div class="col-md-6 justify-content-center">
                                 <button class="btnStyle btn btn-md btn-login mb-2 mr-2" type="button"
-                                    id="btnSiguiente" onclick="numeroSiguiente()">Siguiente</button>
+                                    id="btnSiguiente" onclick="siguienteNumero()">Siguiente</button>
                                 <button class="btnStyle btn btn-md btn-login mb-2" style="display: none;" type="button"
                                     id="btnTerminar" onclick="terminar()">Terminar</button>
                             </div>
@@ -62,6 +62,7 @@
                 {% if departamento.citasDepartamento %}
                 <div class="row d-flex justify-content-center">
                     <div class="col-12 col-sm-12 col-md-8 col-lg-6">
+                        <hr>
                         <div class="d-flex justify-content-center flex-wrap mx-auto ">
                             <div class="col-md-6 justify-content-center">
                                 <button id="btnCrearCita" type="button" class="btnStyle btn btn-md btn-login mb-2 mr-2" type="button" data-bs-toggle="offcanvas" 
@@ -345,6 +346,9 @@
 <script>
     window.onload = function () {
         estados();
+        actualizar_tabla();
+        actualizar_tabla_citas_actuales();
+        actualizar_tabla_citas_dia();
     };
 
     function crearcita() {
@@ -580,10 +584,34 @@
         }
     }
 
+    function siguienteNumero(){
+        var estadoactual = document.getElementById("status_select");
+        if (estadoactual.value == "Disponible" || estadoactual.value == "Ocupado") {
+            var url = "/siguiente-ticket/";
+            var request = new XMLHttpRequest();
+            request.open('GET', url, true);
+            request.onload = function () {
+                if (request.status === 200) {
+                    var data = JSON.parse(request.responseText);
+                }
+            };
+            request.send();
+        }
+    }
+    
     function terminar(){
         var estadoactual = document.getElementById("status_select");
-        estadoactual.selectedIndex = 1;
-        estadosbtn();
+        var url = "/terminar-ticket/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                estadoactual.selectedIndex = 1;
+                estados();
+            }
+        };
+        request.send();
     }
 
     function transferencia(departamento) {
@@ -744,10 +772,14 @@
     }
 
     setInterval(function() {
+        numeroSiguiente();
         actualizar_tabla();
+    }, 1000);
+
+    setInterval(function() {
         actualizar_tabla_citas_actuales();
         actualizar_tabla_citas_dia();
-    }, 1000);
+    }, 10000);
 
     var offcanvasElement = document.getElementById('offcanvasExample2');
     offcanvasElement.addEventListener('hidden.bs.offcanvas', function () {
