--- a/tickets/templates/componentes/navbarheader.html
+++ b/tickets/templates/componentes/navbarheader.html
@@ -23,6 +23,9 @@
                     <a class="nav-link" href="{% url 'casos_agente' %}">CASOS DE AGENTES</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link " id="agentesDropdown" role="button" href="{% url 'control_citas' %}">CONTOL DE CITAS</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'tickets_agente' %}">TICKETS</a>
                 </li>
                 <li class="nav-item">
