--- a/tickets/templates/ticket/ticketmaker.html
+++ b/tickets/templates/ticket/ticketmaker.html
@@ -107,19 +107,22 @@
                         <div class="form-floating" style="margin-bottom: 1px;">
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             <h1 class="modal-title" style="text-align: center; font-weight: 900; color: #000000;" id="modal_tramitesTitle">CITAS CON ASESORES</h1>
-                            <p style="text-align: center; font-size: 25px; color: #878787; font-weight: bold;">Seleccioná el asesor con el cual tenés la cita.</p>
+                            <p style="text-align: center; font-size: 25px; color: #878787; font-weight: bold;">Seleccioná el departamento con el cual tenés la cita.</p>
                         </div>
                     </div>
-                    <div class="row mb-3" style="align-items: center; justify-content: center;">
+                    <div class="row mb-3 mt-3" style="align-items: center; justify-content: center;">
                         <select id="departamento_cita" data-placeholder="Seleccione Departamento"
                             class="roundedInput form-select" name="departamento" required onchange="cargarAgentes()">
                         </select>
                     </div>
                     <div class="row mb-3" style="align-items: center; justify-content: center;">
-                        <select id="agente_select" class="roundedInput form-select" name="agente_select"
-                            data-placeholder="Seleccion Agente">
-                            <option style="opacity: 0.65" value="" disabled selected hidden>Seleccione Agente</option>
-                        </select>
+                        <input type="text" class="roundedInput form-control" id="identificacion"
+                            placeholder="Digitá tu número de identificación" name="identificacion" onkeyup="datacedula()"
+                            required>
+                    </div>
+                    <div class="row mb-3" style="align-items: center; justify-content: center;">
+                        <button class="btnStyle2 btn btn-lg fw-bold pt-1 pb-1 mb-5 mt-1"
+                        type="button" id="btnGenerar" onclick="crear_ticket_cita()"><p style="font-size: 30px;" class="mt-3 mb-3">Generar Ticket</p></button>
                     </div>
                 </main>
             </div>
@@ -233,6 +236,24 @@
         }
     }
 
+    function crear_ticket_cita() {
+        var select = document.getElementById("departamento_cita").value;
+        var ident = document.getElementById("identificacion")
+        var identificacion = document.getElementById("identificacion").value;
+        var url = "/crear-ticket-cita/?departamento=";
+        var request = new XMLHttpRequest();
+        request.open('GET', url + encodeURIComponent(select) + "&identificacion=" + encodeURIComponent(identificacion), true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                $('#modal_citas').modal('hide');
+                ident.value = '';
+            }
+        };
+        request.send();
+        
+    }
+
     function crear_ticket(departamento) {
         var url = "/crear-ticket/?departamento=";
         var request = new XMLHttpRequest();
@@ -300,32 +321,7 @@
                 for (var key in data) {
                     if (data.hasOwnProperty(key)) {
                         var option = document.createElement("option");
-                        option.value = data[key];
-                        option.text = data[key];
-                        select2.add(option);
-                    }
-                }
-                cargarAgentes();
-            }
-        };
-        request.send();
-    }
-
-    function cargarAgentes() {
-        var select = document.getElementById("departamento_cita").value;
-        var select2 = document.getElementById("agente_select");
-
-        var url = "/obtener-agentes/?departamento=";
-        var request = new XMLHttpRequest();
-        request.open('GET', url + encodeURIComponent(select), true);
-        request.onload = function () {
-            if (request.status === 200) {
-                var data = JSON.parse(request.responseText);
-                select2.options.length = 0;
-                for (var key in data) {
-                    if (data.hasOwnProperty(key)) {
-                        var option = document.createElement("option");
-                        option.value = data[key];
+                        option.value = key;
                         option.text = data[key];
                         select2.add(option);
                     }
@@ -334,5 +330,6 @@
         };
         request.send();
     }
+
 </script>
 {% endblock %}
