--- a/tickets/templates/administracion/citas.html
+++ b/tickets/templates/administracion/citas.html
@@ -171,7 +171,7 @@
                                 </div>
                                 <div class="mb-3 ">
                                     <label for="">Hora de Cita</label>
-                                    <input type="time" class="roundedInput form-control" step="900" id="hora" name="hora" required>
+                                    <input type="time" class="roundedInput form-control" id="hora" name="hora" required>
                                 </div>
                             </div>
                             <br>
