--- a/tickets/templates/ticket/ticketmaker.html
+++ b/tickets/templates/ticket/ticketmaker.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="row mb-3 mt-3" style="align-items: center; justify-content: center;">
                         <select id="departamento_cita" data-placeholder="Seleccione Departamento"
-                            class="roundedInput form-select" name="departamento" required onchange="cargarAgentes()">
+                            class="roundedInput form-select" name="departamento" required>
                         </select>
                     </div>
                     <div class="row mb-3" style="align-items: center; justify-content: center;">
@@ -256,6 +256,13 @@
         label.style.display = 'none';
 
     }
+
+    var modal = document.getElementById('modal_citas');
+    modal.addEventListener('hidden.bs.modal', function () {
+        normalizar();
+        var ident = document.getElementById("identificacion")
+        ident.value = "";
+    });
 
     function crear_ticket_cita() {
         var select = document.getElementById("departamento_cita").value;
