--- a/tickets/templates/agentes/registro_agente.html
+++ b/tickets/templates/agentes/registro_agente.html
@@ -42,6 +42,12 @@
                                     <option value="12">12</option>
                                     <option value="13">13</option>
                                     <option value="14">14</option>
+                                    <option value="15">15</option>
+                                    <option value="16">16</option>
+                                    <option value="17">17</option>
+                                    <option value="18">18</option>
+                                    <option value="19">19</option>
+                                    <option value="20">20</option>
                                 </select>
                             </div>
                             <br>
@@ -160,7 +166,6 @@
     }
 
     function initializeWebChannel() {
-        var valor = document.getElementById('departamento').value
         if (typeof QWebChannel !== 'undefined') {
             new QWebChannel(qt.webChannelTransport, function (channel) {
                 var resizeObj = channel.objects.resizeObj;
