--- a/tickets/templates/agentes/inicio_atencion.html
+++ b/tickets/templates/agentes/inicio_atencion.html
@@ -7,6 +7,7 @@
     <div class="row">
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 mx-auto ">
             <h5 id="id_agente" style="display: none;">{{ agente }}</h5>
+            <h5 id="notificacion" style="display: none;">{{ departamento.notiDepartamento }}</h5>
             <main class="form-signin ">
                 <div class="row d-flex justify-content-center">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-2">
@@ -56,6 +57,14 @@
                             <button id="btnTransferir" type="button" class="btnStyle btn btn-md mb-2"
                             type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">Transferir</button>
               
+                        </div>
+                        <div class="justify-content-center flex-wrap mx-auto " id="divCliente" style="display: none;">
+                            <div class="d-flex justify-content-center">
+                                <button class="btnStyle btn btn-md btn-login mb-2" type="button"
+                                    id="btnPresente" onclick="nopresente()">No Presente</button>
+                                <button id="btnLlamar" type="button" class="btnStyle btn btn-md mb-2"
+                                type="button" onclick="llamar()">Llamar</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -338,6 +347,25 @@
 </div>
 {% endblock modal_citas %}
 
+{% block modal_alerta %}
+  <!-- Modal -->
+  <div class="modal fade" id="modal_alerta" tabindex="-1" aria-labelledby="modal_alertaLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="modal_alertaLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock modal_alerta %}
+
 <style>
     .modal-header {
         background-color: #000000;
@@ -403,7 +431,6 @@
 <script>
     window.onload = function () {
         estados();
-        actualizar_tabla();
     };
 
     function crearcita() {
@@ -613,6 +640,7 @@
 
     function numeroSiguiente() {
         var numero = document.getElementById("txtNumero");
+        var cliente = document.getElementById("divCliente");
         var estadoactual = document.getElementById("status_select");
         if (estadoactual.value == "Disponible" || estadoactual.value == "Ocupado") {
             var url = "/numero-agente/";
@@ -630,6 +658,7 @@
                             }
                             else {
                                 estadoactual.selectedIndex = 2;
+                                cliente.style.display = 'block';
                                 estados();
                             }
                         }
@@ -657,6 +686,7 @@
     }
     
     function terminar(){
+        var cliente = document.getElementById("divCliente");
         var estadoactual = document.getElementById("status_select");
         var url = "/terminar-ticket/";
         var request = new XMLHttpRequest();
@@ -665,13 +695,45 @@
             if (request.status === 200) {
                 var data = JSON.parse(request.responseText);
                 estadoactual.selectedIndex = 1;
+                cliente.style.display = 'none';
                 estados();
             }
         };
         request.send();
     }
 
+    function nopresente(){
+        var cliente = document.getElementById("divCliente");
+        var estadoactual = document.getElementById("status_select");
+        var url = "/no-presente/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                estadoactual.selectedIndex = 1;
+                cliente.style.display = 'none';
+                estados();
+            }
+        };
+        request.send();
+    }
+
+    function llamar(){
+        var txtNumero = document.getElementById("txtNumero").textContent;
+        var url = "/llamar-ticket/?codigo=";
+        var request = new XMLHttpRequest();
+        request.open('GET', url + encodeURIComponent(txtNumero), true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+            }
+        };
+        request.send();
+    }
+
     function transferencia(departamento) {
+        var cliente = document.getElementById("divCliente");
         var estadoactual = document.getElementById("status_select");
         var numero = document.getElementById("txtNumero");
         var url = "/transferencia/?departamento=";
@@ -683,6 +745,7 @@
                 estadoactual.selectedIndex = 1;
                 numero.innerHTML = "N/C";
                 estados();
+                cliente.style.display = 'none';
                 $('#offcanvasExample').offcanvas('hide');
             }
         };
@@ -702,12 +765,42 @@
     
     var tabla = document.getElementById("record-table");
     function actualizar_tabla() {
+        var noti = document.getElementById('notificacion').textContent;
         var url = "/actualizar-tabla-departamentos/";
         var request = new XMLHttpRequest();
         request.open('GET', url, true);
     
         request.onload = function () {
             if (request.status === 200) {
+                var response = JSON.parse(request.responseText);
+                var rowCount = tabla.rows.length;
+                for (var i = rowCount - 1; i > 0; i--) {
+                    tabla.deleteRow(i);
+                }
+                response.tabla.forEach(function (registro) {
+                    var fila = tabla.insertRow();
+
+                    var depart = fila.insertCell();
+                    depart.className = '';
+                    var pDepart = document.createElement("p");
+                    pDepart.textContent = registro.nombreDepartamento;
+                    pDepart.className = '';
+                    pDepart.style.fontSize = '';
+                    depart.appendChild(pDepart);
+    
+                    var cant = fila.insertCell();
+                    cant.className = '';
+                    var pCant = document.createElement("p");
+                    pCant.textContent = registro.cantidad;
+                    pCant.className = '';
+                    pCant.style.fontSize = '';
+                    cant.appendChild(pCant);
+
+                });
+                if (noti === 'True'){
+                    notificacion();
+                }
+            }else if (request.status === 202) {
                 var response = JSON.parse(request.responseText);
                 var rowCount = tabla.rows.length;
                 for (var i = rowCount - 1; i > 0; i--) {
@@ -900,7 +993,6 @@
         document.getElementById('record-table-generales_info').style.display = 'none';
     });
 
-
     function modificarcita() {
         var id = document.getElementById("idCita");
         var fecha = document.getElementById("cfecha");
@@ -946,6 +1038,17 @@
         };
         request.send();
 
+    }
+
+    function notificacion() {
+        if (typeof QWebChannel !== 'undefined') {
+            new QWebChannel(qt.webChannelTransport, function (channel) {
+                var resizeObj = channel.objects.resizeObj;
+                if (resizeObj) {
+                    resizeObj.show_notification("Ha llegado un nuevo cliente.");
+                }
+            });
+        }
     }
 </script>
 {% endblock %}
