--- a/tickets/templates/encuestas/encuesta_visor.html
+++ b/tickets/templates/encuestas/encuesta_visor.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="container">
-<div class="row mt-2">
+<div class="row">
     <div class="col-12 col-lg-12 col-md-12 col-sm-12 mx-auto mb-4">
         <div class="card border-0 cardCol rounded-3 my-5 mx-auto">
             <div class="card-body pt-5 pl-8 pr-8">
@@ -13,7 +13,7 @@
                         <div class=" mb-4 mt-3 rounded"
                             style="display: flex; align-items: center; justify-content: center; border-color: white;">
                             <div class="form-floating mb-3 mt-3" style="text-align: center;">
-                                <h1 id="txtCodigo" class="codigo" hidden>{{ codigo }}</h1>
+                                <h1 id="txtCodigo" class="codigo" hidden>N/C</h1>
                                 <h1 id="txtGracias" class="gracias">GRACIAS POR TU VISITA</h1>
                                 <h3 id="txtGracias2" class="gracias2">Es un gusto ayudarte a contruir tus sueños</h3>
                             </div>
@@ -131,24 +131,6 @@
 </style>
 
 <script>
-    function toggleFullScreen() {
-        var doc = window.document;
-        var docEl = doc.documentElement;
-
-        var requestFullScreen = docEl.requestFullscreen || docEl.mozRequestFullScreen || docEl.webkitRequestFullScreen || docEl.msRequestFullscreen;
-        var cancelFullScreen = doc.exitFullscreen || doc.mozCancelFullScreen || doc.webkitExitFullscreen || doc.msExitFullscreen;
-
-        if (!doc.fullscreenElement && !doc.mozFullScreenElement && !doc.webkitFullscreenElement && !doc.msFullscreenElement) {
-            if (requestFullScreen) {
-                requestFullScreen.call(docEl);
-            }
-        } else {
-            if (cancelFullScreen) {
-                cancelFullScreen.call(doc);
-            }
-        }
-    }
-
 
     const txtPregunta = document.getElementById('txtPregunta');
     const txtCodigo = document.getElementById('txtCodigo');
@@ -159,26 +141,30 @@
     var divImg3 = document.getElementById('img3');
 
     function fetchRecords() {
-        fetch(window.location.href, { headers: { 'X-Requested-With': 'XMLHttpRequest' } })
-        .then(response => response.text())
-        .then(data => {
-            const parser = new DOMParser();
-            const newTable = parser.parseFromString(data, 'text/html').getElementById('txtCodigo');
-            const codigo = newTable.textContent;
-            if (codigo != 'N/C'){
-                txtCodigo.hidden = false;
-                txtCodigo.textContent = codigo;
-                encuesta();
+        var url = "/ticket-encuesta/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var response = JSON.parse(request.responseText);
+                if (response.codigo != 'N/C'){
+                    txtCodigo.hidden = false;
+                    txtCodigo.textContent = response.codigo;
+                    encuesta();
+                }
+                else if (txtCodigo.textContent == 'N/C' && response.codigo == 'N/C'){
+                    nocliente();
+                    noencuesta();
+                }else if (txtCodigo.textContent != 'N/C' && response.codigo == 'N/C'){
+                    txtCodigo.hidden = false;
+                    encuesta();
+                }
             }
-            else if (txtCodigo.textContent == 'N/C' && codigo == 'N/C'){
-                nocliente();
-                noencuesta();
-            }else if (txtCodigo.textContent != 'N/C' && codigo == 'N/C'){
-                txtCodigo.hidden = false;
-                encuesta();
-            }
-        });
+        };
+        request.send();
     }
+
+    setInterval(fetchRecords, 1000);
 
     function nocliente(){
         txtCodigo.hidden = true;
@@ -202,9 +188,6 @@
         txtGracias.hidden = true;
         txtGracias2.hidden = true;
     }
-
-    setInterval(fetchRecords, 1000);
-
 
     function metricas(metrica) {
         var url = "/metricas/?estado=";
